--- a/index.html
+++ b/index.html
@@ -1,34 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<title>Judiel Marco L. Ferrer - CS1A</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
-    background-color: white;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-image: url('https://images.lawpath.com.au/2020/06/sean-pollock-PhYq704ffdA-unsplash-scaled.jpg'); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    position: relative;
+  }
+
+  .container {
+    position: relative;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 16px;
+    padding: 40px 50px;
+    width: 600px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(6px);
     text-align: center;
-    padding: 50px;
   }
 
   h2 {
-    color: #333;
-    margin-bottom: 30px;
+    color: #222;
+    margin: 10px 0;
   }
 
   h3 {
-    margin: 15px 0;
+    margin: 20px 0;
+    font-weight: 500;
+  }
+
+  a {
+    text-decoration: none;
+    color: #2E8BC0;
+    transition: color 0.3s, transform 0.2s;
   }
 </style>
 </head>
 <body>
 
-<h2>JUDIEL MARCO L. FERRER</h2>
-<h2>CS1A - Introduction to Computing</h2>
+<div class="container">
+  <h2>JUDIEL MARCO L. FERRER</h2>
+  <h2>CS1A - Introduction to Computing</h2>
 
-<h3><a href="conversion.html">Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to Meters)</a></h3>
-<h3><a href="incomeTax.html">Assignment #2 - Income Tax Calculator</a></h3>
-<h3><a href="factorial.html">Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural Numbers</a></h3>
-<h3><a href="payrollProgram.html">Assignment #4 - Simple Payroll</a></h3>
+  <h3><a href="conversion.html">Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to Meters)</a></h3>
+  <h3><a href="incomeTax.html">Assignment #2 - Income Tax Calculator</a></h3>
+  <h3><a href="factorial.html">Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural Numbers</a></h3>
+  <h3><a href="payrollProgram.html">Assignment #4 - Simple Payroll</a></h3>
+</div>
 
 </body>
 </html>
